Getting rid of deprecated functions from Java updates