@@ -278,7 +278,7 @@ public class NCITermNCIBARatioDBHDefault extends Behavior {
         if (null == f1)
           f2 = null;
         else
-          f2 = new Float(f1.floatValue());
+          f2 = Float.valueOf(f1.floatValue());
         oCopyTo.getValue().remove(i);
         oCopyTo.getValue().add(i, f2);
       }
@@ -288,7 +288,7 @@ public class NCITermNCIBARatioDBHDefault extends Behavior {
         if (null == f1)
           f2 = null;
         else
-          f2 = new Float(f1.floatValue());
+          f2 = Float.valueOf(f1.floatValue());
         oCopyTo.getValue().add(i, f2);
       }
     }
