@@ -419,7 +419,7 @@ public class NCITermNCITempDepBARatioDBHDefault extends Behavior {
         if (null == f1)
           f2 = null;
         else
-          f2 = new Float(f1.floatValue());
+          f2 = Float.valueOf(f1.floatValue());
         oCopyTo.getValue().remove(i);
         oCopyTo.getValue().add(i, f2);
       }
@@ -429,7 +429,7 @@ public class NCITermNCITempDepBARatioDBHDefault extends Behavior {
         if (null == f1)
           f2 = null;
         else
-          f2 = new Float(f1.floatValue());
+          f2 = Float.valueOf(f1.floatValue());
         oCopyTo.getValue().add(i, f2);
       }
     }
@@ -467,7 +467,7 @@ public class NCITermNCITempDepBARatioDBHDefault extends Behavior {
         if (null == f1)
           f2 = null;
         else
-          f2 = new Float(f1.floatValue());
+          f2 = Float.valueOf(f1.floatValue());
         oCopyTo.getValue().remove(i);
         oCopyTo.getValue().add(i, f2);
       }
@@ -477,7 +477,7 @@ public class NCITermNCITempDepBARatioDBHDefault extends Behavior {
         if (null == f1)
           f2 = null;
         else
-          f2 = new Float(f1.floatValue());
+          f2 = Float.valueOf(f1.floatValue());
         oCopyTo.getValue().add(i, f2);
       }
     }
@@ -514,7 +514,7 @@ public class NCITermNCITempDepBARatioDBHDefault extends Behavior {
         if (null == f1)
           f2 = null;
         else
-          f2 = new Float(f1.floatValue());
+          f2 = Float.valueOf(f1.floatValue());
         oCopyTo.getValue().remove(i);
         oCopyTo.getValue().add(i, f2);
       }
@@ -524,7 +524,7 @@ public class NCITermNCITempDepBARatioDBHDefault extends Behavior {
         if (null == f1)
           f2 = null;
         else
-          f2 = new Float(f1.floatValue());
+          f2 = Float.valueOf(f1.floatValue());
         oCopyTo.getValue().add(i, f2);
       }
     }
