@@ -168,7 +168,7 @@ public class MerchValueDataRequest extends DataRequest {
     if (iPos == -1) {
       return -1;
     }
-    return new Integer(sLabel.substring(iPos + 1)).intValue();
+    return Integer.valueOf(sLabel.substring(iPos + 1)).intValue();
   }
 
   /**
