@@ -326,7 +326,7 @@ public class ManageTreeMap extends JDialog implements ActionListener {
         //Get the DBH scale factor
         float fNewScale, fNewDbh;
         try {
-          Float oNewScale = new Float(m_jDBHScale.getText());
+          Float oNewScale = Float.valueOf(m_jDBHScale.getText());
           fNewScale = oNewScale.floatValue();
         }
         catch (java.lang.NumberFormatException oErr) {
@@ -347,7 +347,7 @@ public class ManageTreeMap extends JDialog implements ActionListener {
 
         //Get the new minimum DBH
         try {
-          Float oNewDbh = new Float(m_jMinDbh.getText());
+          Float oNewDbh = Float.valueOf(m_jMinDbh.getText());
           fNewDbh = oNewDbh.floatValue();
         }
         catch (java.lang.NumberFormatException oErr) {
