@@ -102,7 +102,7 @@ public class NCILargerNeighborsTest extends TestCase {
       NCIMasterGrowth oMaster = (NCIMasterGrowth) p_oBehs.get(0);
       assertTrue(oMaster.mp_oEffects.get(1) instanceof NCILargerNeighbors);
       NCILargerNeighbors oNCITerm = (NCILargerNeighbors) oMaster.mp_oEffects.get(1);
-      oNCITerm.mp_fNCIMaxCrowdingRadius.getValue().set(0, new Float(-20));
+      oNCITerm.mp_fNCIMaxCrowdingRadius.getValue().set(0, Float.valueOf((float)-20));
       oManager.getGrowthBehaviors().validateData(oManager.getTreePopulation());
       fail("Parameter file read failed to catch bad NCI max radius values.");
     }
@@ -124,7 +124,7 @@ public class NCILargerNeighborsTest extends TestCase {
       NCIMasterGrowth oMaster = (NCIMasterGrowth) p_oBehs.get(0);
       assertTrue(oMaster.mp_oEffects.get(1) instanceof NCILargerNeighbors);
       NCILargerNeighbors oNCITerm = (NCILargerNeighbors) oMaster.mp_oEffects.get(1);
-      oNCITerm.mp_fNCIMinNeighborDBH.getValue().set(0, new Float(-20));
+      oNCITerm.mp_fNCIMinNeighborDBH.getValue().set(0, Float.valueOf((float)-20));
       oManager.getGrowthBehaviors().validateData(oManager.getTreePopulation());
       fail("Parameter file read failed to catch bad min neighbor DBH values.");
     }
